--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,14 +33,14 @@ jobs:
 
       - name: Test
         env:
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/postgres
+          DATABASE_URL: postgresql://postgres:postgres@127.0.0.1:5432/postgres
         run: |
           python -m pytest
 
       - name: Export DB on Failure
         if: ${{ failure() }}
         env:
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/postgres
+          DATABASE_URL: postgresql://postgres:postgres@127.0.0.1:5432/postgres
         run: |
           pip install 'db-to-sqlite[postgresql]'
           db-to-sqlite "$DATABASE_URL" postgres.db --all
